Fixed IE scrollbar issues for most if not all components
Fixed by defining font-size:0 and line-height:normal for all v-scrollable elements. A font-size is defined using $font-size for all themes and this is reset in v-widget. Similarly for $line-height.
Should fix at least #9004, #9552, #9572

--- a/WebContent/VAADIN/themes/base/accordion/accordion.scss
+++ b/WebContent/VAADIN/themes/base/accordion/accordion.scss
@@ -5,6 +5,7 @@
 	outline: none;
 	overflow: visible;
 	text-align: left; /* Force default alignment */
+	font-size: 0;
 }
 .v-accordion-item {
 	position: relative;
@@ -19,6 +20,7 @@
 }
 .v-accordion-item-caption .v-caption {
 	cursor: pointer;
+	font-size: $font-size;
 }
 .v-accordion-item-open .v-accordion-item-caption .v-caption {
 	cursor: default;
